syntax = "proto3";

package UserService;

option go_package = "github.com/pavel/user_service/pkg/pb/auth";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CheckAuthToken(CheckTokenRequest) returns (CheckTokenResponse);
  rpc RefreshAuthToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);

}

message RegisterRequest {
  string email = 1;
  string password = 2;
  uint32 role_id = 3;
}

message RegisterResponse {
  int32 status = 1;
  string error = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  string error = 2;
  string access_token = 3;
  string refresh_token = 4;
  uint64 refresh_token_expire = 5;
}

message CheckTokenRequest {
  string token = 1;
}

message CheckTokenResponse {
  int32 status = 1;
  string error = 2;
  uint64 user_id = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  int32 status = 1;
  string error = 2;
  string access_token = 3;
  string refresh_token = 4;
  uint64 refresh_token_expire = 5;
}

message LogoutRequest{
  int32 status = 1;
  string error = 2;
  string token = 3;
}

message LogoutResponse{
  int32 status = 1;
  string error = 2;
}